# campello_nn

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  GPU_BACKEND_PROPOSAL.md  NN_ARCHITECTURE.md  README.md  TODO.md  android.cmake  ios.cmake  windows.cmake
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark_backends.cpp
cmake/: linux.cmake  macos.cmake  wasm.cmake  windows.cmake
examples/cpu/: CMakeLists.txt  main.cpp
inc/campello_nn/: context.hpp  fence.hpp  float16.hpp  graph.hpp  graph_builder.hpp  graph_cache.hpp  graph_info.hpp  onnx_importer.hpp  operand.hpp  tensor.hpp  tflite_importer.hpp
inc/campello_nn/constants/: data_type.hpp  device_type.hpp  resize_mode.hpp
inc/campello_nn/descriptors/: context_descriptor.hpp  conv2d_descriptor.hpp  pool2d_descriptor.hpp  resize_descriptor.hpp  tensor_descriptor.hpp
scripts/: compile_gpu_shaders.py
src/android/: android_backend.hpp
src/cpu/: cpu_backend.cpp  cpu_backend.hpp  cpu_fence.hpp  cpu_graph.hpp  cpu_tensor.hpp  cpu_value.hpp  ops.cpp  ops.hpp  simd.hpp  simd_kernels.hpp  simd_kernels_avx2.cpp  strides.hpp  thread_pool.cpp  thread_pool.hpp
src/directml/: directml_backend.cpp  directml_backend.hpp
src/gpu/: gpu_backend.cpp  gpu_backend.hpp
src/gpu/shaders/: add.comp  add.hlsl  add.metal  add_metallib.hpp  add_spv.hpp  batchnorm.comp  batchnorm.hlsl  batchnorm.metal  batchnorm_metallib.hpp  batchnorm_spv.hpp  broadcast_binary.comp  broadcast_binary.hlsl  broadcast_binary.metal  broadcast_binary_metallib.hpp  broadcast_binary_spv.hpp  concat.comp  concat.hlsl  concat.metal  concat_metallib.hpp  concat_spv.hpp  conv2d.comp  conv2d.hlsl  conv2d.metal  conv2d_metallib.hpp  conv2d_spv.hpp  conv_fused.comp  conv_fused.hlsl  conv_fused.metal  conv_fused_bn.comp  conv_fused_bn.hlsl  conv_fused_bn.metal  conv_fused_bn_metallib.hpp  conv_fused_bn_spv.hpp  conv_fused_metallib.hpp  conv_fused_spv.hpp  conv_gemm.comp  conv_gemm.hlsl  conv_gemm.metal  conv_gemm_metallib.hpp  conv_gemm_spv.hpp  (+90 more)
src/metal/: mps_backend.hpp  mps_backend.mm
src/onnx/: onnx_importer.cpp  onnx_model.hpp  onnx_parser.cpp  proto_reader.hpp
src/pi/: backend.hpp  context.cpp  context_data.hpp  fence.cpp  graph.cpp  graph_builder.cpp  graph_builder_data.hpp  graph_cache.cpp  graph_info.cpp  graph_info.hpp  ir.hpp  ir_serialization.cpp  ir_serialization.hpp  operand.cpp  resource_data.hpp  tensor.cpp
src/tflite/: tflite_importer.cpp  tflite_model.hpp  tflite_parser.cpp
tests/: CMakeLists.txt
tests/fixtures/: NOTICE.md  batch_matmul.tflite  batch_matmul_tflite.json  conv_add_relu.onnx  conv_add_relu.tflite  conv_add_relu_tflite.json  depthwise_conv2d.tflite  depthwise_conv2d_tflite.json  generate_conv_add_relu_onnx.py
tests/fixtures/images/: NOTICE.md
tests/platform/: test_directml_float16_ops.cpp  test_directml_graph_cache.cpp  test_directml_ops.cpp  test_directml_quantization_ops.cpp  test_gpu_generic_models.cpp  test_gpu_generic_ops.cpp  test_mps_float16_ops.cpp  test_mps_graph_cache.cpp  test_mps_ops.cpp  test_mps_quantization_ops.cpp
tests/universal/: test_blazeface_face_detection.cpp  test_cpu_float16_ops.cpp  test_cpu_ops.cpp  test_cpu_quantization_ops.cpp  test_cpu_simd.cpp  test_cpu_threading.cpp  test_graph_builder_validation.cpp  test_graph_cache.cpp  test_helpers.hpp  test_onnx_importer.cpp  test_tflite_importer.cpp  test_transformer_block.cpp  test_yunet_face_detection.cpp
